# mecha-nudges-skill

./: .env.example  .gitignore  AGENTS.md  INSTALL.md  README.md  SKILL.md  pvi.py  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.pvi_cache/: buy-or-skip__claude_haiku__baseline.json
examples/: task.json
skills/mecha-nudge/: AGENTS.md  SKILL.md  mecha_nudge.py
skills/pvi/: AGENTS.md  SKILL.md  pvi.py
skills/pvi/examples/: data.jsonl
