[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pvi-skill"
version = "0.1.0"
description = "Measure and optimize how much a piece of text informs an AI agent's decision (pseudo-PVI)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Giulio Frey" }]
keywords = ["pvi", "v-information", "llm", "prompt-optimization", "openai", "mecha-nudge"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "openai>=1.0",
  "tiktoken>=0.7",
]
# license: add `license = { text = "MIT" }` (and a LICENSE file) once you pick one.

[project.scripts]
pvi = "pvi:main"

[project.urls]
Homepage = "https://giuliofrey.eu/mecha-nudges/"

# The CLI is a single module, pvi.py, living next to the skill it powers
# (skills/pvi/). package-dir maps that folder to the import root so `pip install`
# exposes both `import pvi` and the `pvi` console command from one source file.
[tool.setuptools]
py-modules = ["pvi"]
package-dir = { "" = "skills/pvi" }
